--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,32 +1,6 @@
-# stages:  
-#   - execute-script
-
-
-# variables:
-#   GIT_STRATEGY: clone
-
-# # Job pour les événements "issue"
-# execute-python-on-issue-update:
-#   stage: execute-script
-#   script:
-#     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
-#   rules:
-#     # - if: '$CI_PIPELINE_SOURCE == "issue" && $CI_COMMIT_REF_NAME == "main"'
-#     - if: '$CI_PIPELINE_SOURCE == "web"'
-#     - if: '$CI_PIPELINE_SOURCE == "trigger"'
-
-# # Job pour les événements "merge_request"
-# execute-python-on-pr-update:
-#   stage: execute-script
-#   script:
-#     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
-#   rules:
-#     - if: '$CI_PIPELINE_SOURCE == "web"'
-#     - if: '$CI_PIPELINE_SOURCE == "trigger"' 
-
-
-stages:
+stages:  
   - execute-script
+
 
 variables:
   GIT_STRATEGY: clone
@@ -37,9 +11,9 @@ execute-python-on-issue-update:
   script:
     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "issue"' # Exécuter pour les événements "issue"
-    - if: '$CI_PIPELINE_SOURCE == "web"'    # Exécuter pour les déclencheurs manuels
-    - if: '$CI_PIPELINE_SOURCE == "trigger"' # Exécuter pour les pipelines déclenchées via l'API
+    # - if: '$CI_PIPELINE_SOURCE == "issue" && $CI_COMMIT_REF_NAME == "main"'
+    - if: '$CI_PIPELINE_SOURCE == "web"'
+    - if: '$CI_PIPELINE_SOURCE == "trigger"'
 
 # Job pour les événements "merge_request"
 execute-python-on-pr-update:
@@ -47,6 +21,32 @@ execute-python-on-pr-update:
   script:
     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"' # Exécuter pour les événements "merge request"
-    - if: '$CI_PIPELINE_SOURCE == "web"'                # Exécuter pour les déclencheurs manuels
-    - if: '$CI_PIPELINE_SOURCE == "trigger"'            # Exécuter pour les pipelines déclenchées via l'API
+    - if: '$CI_PIPELINE_SOURCE == "web"'
+    - if: '$CI_PIPELINE_SOURCE == "trigger"' 
+
+
+# stages:
+#   - execute-script
+
+# variables:
+#   GIT_STRATEGY: clone
+
+# # Job pour les événements "issue"
+# execute-python-on-issue-update:
+#   stage: execute-script
+#   script:
+#     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE == "issue"' # Exécuter pour les événements "issue"
+#     - if: '$CI_PIPELINE_SOURCE == "web"'    # Exécuter pour les déclencheurs manuels
+#     - if: '$CI_PIPELINE_SOURCE == "trigger"' # Exécuter pour les pipelines déclenchées via l'API
+
+# # Job pour les événements "merge_request"
+# execute-python-on-pr-update:
+#   stage: execute-script
+#   script:
+#     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE == "merge_request_event"' # Exécuter pour les événements "merge request"
+#     - if: '$CI_PIPELINE_SOURCE == "web"'                # Exécuter pour les déclencheurs manuels
+#     - if: '$CI_PIPELINE_SOURCE == "trigger"'            # Exécuter pour les pipelines déclenchées via l'API
