--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,39 +27,7 @@
 
 
 
-stages:  
-  - execute-script
-
-variables:
-  GIT_STRATEGY: clone
-
-# Job pour les événements "issue"
-execute-python-on-issue-update:
-  stage: execute-script
-  interruptible: true  # Ajout de l'option interruptible
-  script:
-    - python3 /home/gitlab-runner/scripts-secures/script_issue.py
-  rules:
-    # - if: '$CI_PIPELINE_SOURCE == "issue" && $CI_COMMIT_REF_NAME == "main"'
-    - if: '$CI_PIPELINE_SOURCE == "web"'
-    - if: '$CI_PIPELINE_SOURCE == "trigger"'
-
-# Job pour les événements "merge_request"
-execute-python-on-pr-update:
-  stage: execute-script
-  interruptible: true  # Ajout de l'option interruptible
-  script:
-    - python3 /home/gitlab-runner/scripts-secures/script_pr.py
-  rules:
-    - if: '$CI_PIPELINE_SOURCE == "web"'
-    - if: '$CI_PIPELINE_SOURCE == "trigger"'
-
-
-
-
-
-
-# stages:
+# stages:  
 #   - execute-script
 
 # variables:
@@ -68,19 +36,51 @@ execute-python-on-pr-update:
 # # Job pour les événements "issue"
 # execute-python-on-issue-update:
 #   stage: execute-script
+#   interruptible: true  # Ajout de l'option interruptible
 #   script:
 #     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
 #   rules:
-#     - if: '$CI_PIPELINE_SOURCE == "issue"' # Exécuter pour les événements "issue"
-#     - if: '$CI_PIPELINE_SOURCE == "web"'    # Exécuter pour les déclencheurs manuels
-#     - if: '$CI_PIPELINE_SOURCE == "trigger"' # Exécuter pour les pipelines déclenchées via l'API
+#     # - if: '$CI_PIPELINE_SOURCE == "issue" && $CI_COMMIT_REF_NAME == "main"'
+#     - if: '$CI_PIPELINE_SOURCE == "web"'
+#     - if: '$CI_PIPELINE_SOURCE == "trigger"'
 
 # # Job pour les événements "merge_request"
 # execute-python-on-pr-update:
 #   stage: execute-script
+#   interruptible: true  # Ajout de l'option interruptible
 #   script:
 #     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
 #   rules:
-#     - if: '$CI_PIPELINE_SOURCE == "merge_request_event"' # Exécuter pour les événements "merge request"
-#     - if: '$CI_PIPELINE_SOURCE == "web"'                # Exécuter pour les déclencheurs manuels
-#     - if: '$CI_PIPELINE_SOURCE == "trigger"'            # Exécuter pour les pipelines déclenchées via l'API
+#     - if: '$CI_PIPELINE_SOURCE == "web"'
+#     - if: '$CI_PIPELINE_SOURCE == "trigger"'
+
+
+
+
+
+
+stages:
+  - execute-script
+
+variables:
+  GIT_STRATEGY: clone
+
+# Job pour les événements "issue"
+execute-python-on-issue-update:
+  stage: execute-script
+  script:
+    - python3 /home/gitlab-runner/scripts-secures/script_issue.py
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "issue"' # Exécuter pour les événements "issue"
+    - if: '$CI_PIPELINE_SOURCE == "web"'    # Exécuter pour les déclencheurs manuels
+    - if: '$CI_PIPELINE_SOURCE == "trigger"' # Exécuter pour les pipelines déclenchées via l'API
+
+# Job pour les événements "merge_request"
+execute-python-on-pr-update:
+  stage: execute-script
+  script:
+    - python3 /home/gitlab-runner/scripts-secures/script_pr.py
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"' # Exécuter pour les événements "merge request"
+    - if: '$CI_PIPELINE_SOURCE == "web"'                # Exécuter pour les déclencheurs manuels
+    - if: '$CI_PIPELINE_SOURCE == "trigger"'            # Exécuter pour les pipelines déclenchées via l'API
