--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,63 +27,63 @@
 
 
 
-# stages:  
-#   - execute-script
-
-# variables:
-#   GIT_STRATEGY: clone
-
-# # Job pour les événements "issue"
-# execute-python-on-issue-update:
-#   stage: execute-script
-#   interruptible: true  # Ajout de l'option interruptible
-#   script:
-#     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
-#   rules:
-#     # - if: '$CI_PIPELINE_SOURCE == "issue" && $CI_COMMIT_REF_NAME == "main"'
-#     - if: '$CI_PIPELINE_SOURCE == "web"'
-#     - if: '$CI_PIPELINE_SOURCE == "trigger"'
-
-# # Job pour les événements "merge_request"
-# execute-python-on-pr-update:
-#   stage: execute-script
-#   interruptible: true  # Ajout de l'option interruptible
-#   script:
-#     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
-#   rules:
-#     - if: '$CI_PIPELINE_SOURCE == "web"'
-#     - if: '$CI_PIPELINE_SOURCE == "trigger"'
-
-
-
-
-
-
 stages:  
   - execute-script
 
 variables:
   GIT_STRATEGY: clone
 
-# Job pour les événements liés aux tickets (issue)
+# Job pour les événements "issue"
 execute-python-on-issue-update:
   stage: execute-script
   interruptible: true  # Ajout de l'option interruptible
   script:
     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
   rules:
-    # Déclencheurs pour les événements liés aux tickets
-    - if: '$CI_PIPELINE_SOURCE == "web" && ($CI_MERGE_REQUEST_ACTION == "open" || $CI_MERGE_REQUEST_ACTION == "update" || $CI_MERGE_REQUEST_ACTION == "close" || $CI_MERGE_REQUEST_ACTION == "reopen")'
+    # - if: '$CI_PIPELINE_SOURCE == "issue" && $CI_COMMIT_REF_NAME == "main"'
+    - if: '$CI_PIPELINE_SOURCE == "web"'
     - if: '$CI_PIPELINE_SOURCE == "trigger"'
 
-# Job pour les événements poussés et les requêtes de fusion
+# Job pour les événements "merge_request"
 execute-python-on-pr-update:
   stage: execute-script
   interruptible: true  # Ajout de l'option interruptible
   script:
     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
   rules:
-    # Déclencheurs pour les événements poussés et les requêtes de fusion
-    - if: '$CI_PIPELINE_SOURCE == "push"'
-    - if: '$CI_PIPELINE_SOURCE == "web" && ($CI_MERGE_REQUEST_ACTION == "open" || $CI_MERGE_REQUEST_ACTION == "update" || $CI_MERGE_REQUEST_ACTION == "merge")'
+    - if: '$CI_PIPELINE_SOURCE == "web"'
     - if: '$CI_PIPELINE_SOURCE == "trigger"'
+
+
+
+
+
+
+# stages:  
+#   - execute-script
+
+# variables:
+#   GIT_STRATEGY: clone
+
+# # Job pour les événements liés aux tickets (issue)
+# execute-python-on-issue-update:
+#   stage: execute-script
+#   interruptible: true  # Ajout de l'option interruptible
+#   script:
+#     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
+#   rules:
+#     # Déclencheurs pour les événements liés aux tickets
+#     - if: '$CI_PIPELINE_SOURCE == "web" && ($CI_MERGE_REQUEST_ACTION == "open" || $CI_MERGE_REQUEST_ACTION == "update" || $CI_MERGE_REQUEST_ACTION == "close" || $CI_MERGE_REQUEST_ACTION == "reopen")'
+#     - if: '$CI_PIPELINE_SOURCE == "trigger"'
+
+# # Job pour les événements poussés et les requêtes de fusion
+# execute-python-on-pr-update:
+#   stage: execute-script
+#   interruptible: true  # Ajout de l'option interruptible
+#   script:
+#     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
+#   rules:
+#     # Déclencheurs pour les événements poussés et les requêtes de fusion
+#     - if: '$CI_PIPELINE_SOURCE == "push"'
+#     - if: '$CI_PIPELINE_SOURCE == "web" && ($CI_MERGE_REQUEST_ACTION == "open" || $CI_MERGE_REQUEST_ACTION == "update" || $CI_MERGE_REQUEST_ACTION == "merge")'
+#     - if: '$CI_PIPELINE_SOURCE == "trigger"'
