--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,28 +53,27 @@
 #   rules:
 #     - if: '$CI_PIPELINE_SOURCE == "web"'
 #     - if: '$CI_PIPELINE_SOURCE == "trigger"'
-
 stages:
   - execute-script
 
 variables:
   GIT_STRATEGY: clone
-  AUTO_CANCEL: true  # Active l'annulation automatique des jobs redondants
+  AUTO_CANCEL: true
 
-# Job pour les événements "issue"
-execute-python-on-issue-update:
+# Job pour les push sur main (issues et modifications directes)
+execute-python-on-main:
   stage: execute-script
   interruptible: true
   script:
     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
   rules:
+    - if: '$CI_PIPELINE_SOURCE == "push" && $CI_COMMIT_REF_NAME == "main"'
     - if: '$CI_PIPELINE_SOURCE == "web" && $CI_COMMIT_REF_NAME == "main"'
     - if: '$CI_PIPELINE_SOURCE == "trigger" && $CI_COMMIT_REF_NAME == "main"'
   after_script:
     - |
-      # Supprime les pipelines précédentes pour ce job
-      if [[ "$CI_PIPELINE_SOURCE" == "web" || "$CI_PIPELINE_SOURCE" == "trigger" ]]; then
-        PIPELINE_IDS=$(curl --header "PRIVATE-TOKEN: $CI_JOB_TOKEN" "$CI_API_V4_URL/projects/$CI_PROJECT_ID/pipelines?status=success&ref=$CI_COMMIT_REF_NAME" | jq '.[].id')
+      if [[ "$CI_PIPELINE_SOURCE" =~ ^(web|trigger|push)$ ]]; then
+        PIPELINE_IDS=$(curl -s --header "PRIVATE-TOKEN: $CI_JOB_TOKEN" "$CI_API_V4_URL/projects/$CI_PROJECT_ID/pipelines?status=success&ref=$CI_COMMIT_REF_NAME" | jq '.[].id')
         for id in $PIPELINE_IDS; do
           if [ "$id" -lt "$CI_PIPELINE_ID" ]; then
             curl --request DELETE --header "PRIVATE-TOKEN: $CI_JOB_TOKEN" "$CI_API_V4_URL/projects/$CI_PROJECT_ID/pipelines/$id"
@@ -82,28 +81,27 @@ execute-python-on-issue-update:
         done
       fi
 
-# Job pour les événements "merge_request"
-execute-python-on-pr-update:
+# Job pour les merge requests et autres branches
+execute-python-on-branches:
   stage: execute-script
   interruptible: true
   script:
     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
   rules:
+    - if: '$CI_PIPELINE_SOURCE == "push" && $CI_COMMIT_REF_NAME != "main"'
+    - if: '$CI_PIPELINE_SOURCE == "merge_request"'
     - if: '$CI_PIPELINE_SOURCE == "web" && $CI_COMMIT_REF_NAME != "main"'
     - if: '$CI_PIPELINE_SOURCE == "trigger" && $CI_COMMIT_REF_NAME != "main"'
   after_script:
     - |
-      # Supprime les pipelines précédentes pour ce job
-      if [[ "$CI_PIPELINE_SOURCE" == "web" || "$CI_PIPELINE_SOURCE" == "trigger" ]]; then
-        PIPELINE_IDS=$(curl --header "PRIVATE-TOKEN: $CI_JOB_TOKEN" "$CI_API_V4_URL/projects/$CI_PROJECT_ID/pipelines?status=success&ref=$CI_COMMIT_REF_NAME" | jq '.[].id')
+      if [[ "$CI_PIPELINE_SOURCE" =~ ^(web|trigger|push|merge_request)$ ]]; then
+        PIPELINE_IDS=$(curl -s --header "PRIVATE-TOKEN: $CI_JOB_TOKEN" "$CI_API_V4_URL/projects/$CI_PROJECT_ID/pipelines?status=success&ref=$CI_COMMIT_REF_NAME" | jq '.[].id')
         for id in $PIPELINE_IDS; do
           if [ "$id" -lt "$CI_PIPELINE_ID" ]; then
             curl --request DELETE --header "PRIVATE-TOKEN: $CI_JOB_TOKEN" "$CI_API_V4_URL/projects/$CI_PROJECT_ID/pipelines/$id"
           fi
         done
       fi
-
-
 
 
 # stages:  
